<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_address_name"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_show_place"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/ic_place_description"
            android:src="@drawable/ic_place" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/ic_details_description"
            android:src="@drawable/ic_details" />

    </LinearLayout>

</android.support.v7.widget.CardView>
